tests/anp_bad_path_test_3/anps.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: same-name
spec:
  priority: 50
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "deny-all-ingress-from-slytherin"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "deny-all-egress-to-slytherin"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: same-name # error two ANPs with same name
spec:
  priority: 40
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "pass-all-ingress-from-slytherin"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
            matchLabels:
              conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "pass-all-egress-to-slytherin"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
              conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
---
